--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" href="/img/weather.png" type="image/x-icon">
-    <title>Web Server</title>
+    <title>Weather App</title>
 </head>
 
 <body>
