--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This website was created by Monil Doshi. The app uses mapbox.com and darksky.net for getting the location and Weather information</p>
         <img class="potrait" src="/img/robot.png" alt="pic2">
     </div>
     {{>footer}}
